--- a/profile.html
+++ b/profile.html
@@ -4,14 +4,25 @@
     <link rel="icon" href="hearts.png" type="image/icon type">
     <link rel="stylesheet" href="profile.css"></head>
 <body>
+    <header>
+        <h1>frpl.</h1>
     <nav>
         <div class="top">
-            <div class="left"></div>
+            <div class="left">
+
+            </div>
             <div class="center"></div>
-            <div class="right"></div>
+            <div class="right">
+                <a href="" >help me</a>
+                <a href="" >bo$$ up</a>
+            </div>
         </div>
-        <ul class="links"></ul>
+        <ul class="links">
+            <li class="active"><a href="">home</a></li>
+            <li class="active"><a href="">search</a></li>
+        </ul>
     </nav>
+    </header>   
     <div class="profile-snapshot">
         <h2 id="header">frappy</h2>
         <h4 id="header">real og</h4>
