fixed main profile centering

--- a/profile.html
+++ b/profile.html
@@ -23,6 +23,8 @@
         </ul>
     </nav>
     </header>   
+    <br>
+<div class="profile-main">
     <div class="profile-snapshot">
         <h2 id="header">frappy</h2>
         <h4 id="header">real og</h4>
@@ -47,4 +49,7 @@
             <tr><td>CS Interests</td>
             <td>Full stack Development, <br></td></tr>
         </table>
-    </div></body>
+    </div>
+</div>
+
+</body>
