fixing header/nav css

--- a/profile.html
+++ b/profile.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" href="profile.css"></head>
 <body>
     <header>
-        <h1>frpl.</h1>
+        <h1 id="nav-title"><a href="#">frapl.</a>
+        </h1>
     <nav>
         <div class="top">
             <div class="left">
@@ -18,7 +19,6 @@
             </div>
         </div>
         <ul class="links">
-            <li class="active"><a href="">home</a></li>
             <li class="active"><a href="">search</a></li>
         </ul>
     </nav>
