--- a/profile.html
+++ b/profile.html
@@ -19,7 +19,7 @@
             </div>
         </div>
         <ul class="links">
-            <li class="active"><a href="">search</a></li>
+            <input type="text" placeholder="notRnPlz..">
         </ul>
     </nav>
     </header>   
